# ChangeLog for app-text/zathura
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/zathura/ChangeLog,v 1.28 2012/03/11 14:40:04 ssuominen Exp $

  11 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -zathura-0.0.8.4.ebuild,
  -zathura-0.1.0.ebuild:
  old

*zathura-0.1.1 (11 Mar 2012)

  11 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +zathura-0.1.1.ebuild:
  Version bump.

  09 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> zathura-0.1.0.ebuild:
  pkg_postinst() message about the separate app-text/zathura-pdf-poppler
  plug-in wrt #405289, Comment #5 by Ben Kohler

  08 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> zathura-0.1.0.ebuild:
  Use GTK+-2 for now because zathura-pdf-poppler plug-in is still GTK+-2.

*zathura-0.1.0 (08 Mar 2012)

  08 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +zathura-0.1.0.ebuild:
  Version bump wrt #405289 by Paweł Rumian

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> zathura-0.0.8.5.ebuild:
  x86 stable wrt bug #404623

  25 Feb 2012; Agostino Sarubbo <ago@gentoo.org> zathura-0.0.8.5.ebuild:
  Stable for amd64, wrt bug #404623

*zathura-0.0.8.5 (05 Dec 2011)

  05 Dec 2011; Alex Alexander <wired@gentoo.org> +zathura-0.0.8.5.ebuild:
  version bump

  18 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -zathura-0.0.8.1.ebuild,
  -zathura-0.0.8.3.ebuild:
  old

  18 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> zathura-0.0.8.4.ebuild:
  amd64/x86 stable wrt #387531

*zathura-0.0.8.4 (09 Sep 2011)

  09 Sep 2011; Alex Alexander <wired@gentoo.org> +zathura-0.0.8.4.ebuild:
  version bump, bug #379215

  26 May 2011; Michael Weber <xmw@gentoo.org> zathura-0.0.8.3.ebuild:
  added ~arm keyword (bug 368757)

*zathura-0.0.8.3 (02 May 2011)

  02 May 2011; Samuli Suominen <ssuominen@gentoo.org> +zathura-0.0.8.3.ebuild:
  Version bump wrt #363373 by Hans-Peter Deifel and Arseny Solokha

  30 Dec 2010; Alex Alexander <wired@gentoo.org> zathura-0.0.8.2.ebuild,