@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/girara
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/girara/ChangeLog,v 1.4 2012/03/11 14:30:41 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/girara/ChangeLog,v 1.5 2012/03/30 05:44:55 ssuominen Exp $
+
+*girara-0.1.2 (30 Mar 2012)
+
+  30 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +girara-0.1.2.ebuild:
+  Version bump.
 
   11 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
   -girara-0.1.0-r200.ebuild, -girara-0.1.0-r300.ebuild:
