@@ -1,6 +1,11 @@
 # ChangeLog for app-text/zathura
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/zathura/ChangeLog,v 1.28 2012/03/11 14:40:04 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/zathura/ChangeLog,v 1.29 2012/03/30 05:48:17 ssuominen Exp $
+
+*zathura-0.1.2 (30 Mar 2012)
+
+  30 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +zathura-0.1.2.ebuild:
+  Version bump.
 
   11 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> -zathura-0.0.8.4.ebuild,
   -zathura-0.1.0.ebuild:
